# robot_arm_sloshing_with_LQR_PIRNN

./: CMakeLists.txt  README.md  handshake.cpp  package.xml
model/: model_dataset4.pt  ugrp_traced_model_loss123_20_cpu_.pt
motorlib/: CMakeLists.txt
motorlib/src/: Motor_control.cpp
